Refacor connection classes again

--- a/RTSPClient/CMakeLists.txt
+++ b/RTSPClient/CMakeLists.txt
@@ -3,7 +3,7 @@
 #
 
 # Добавьте источник в исполняемый файл этого проекта.
-add_executable (RTSPClient "src/RTSPClient.cpp" "src/include/TCPConnection.h" "src/TCPConnection.cpp" "src/include/SDP.h" "src/SDP.cpp" "src/include/UDPConnection.h" "src/UDPConnection.cpp")
+add_executable (RTSPClient "src/RTSPClient.cpp" "src/include/TCPConnection.h" "src/TCPConnection.cpp" "src/include/SDP.h" "src/SDP.cpp" "src/include/UDPConnection.h" "src/UDPConnection.cpp" "src/include/Connection.h" "src/Connection.cpp")
 
 if (CMAKE_VERSION VERSION_GREATER 3.12)
   set_property(TARGET RTSPClient PROPERTY CXX_STANDARD 20)
